# AI_From_Scratch

./: README.md  pyproject.toml
src/: activation_functions.py  layer.py  network.py  optimizer.py  training_loop.py
test/: test_activations.py  test_layer.py
