[project]
name = "AI_From_Scratch"
version = "1.0.0"
description = "Implementation of a neural network from scratch using only NumPy, trained on MNIST dataset"
authors = [
    {name = "Tyler"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "numpy>=2.0.0,<3.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project.urls]
Repository = "https://github.com/tcjordan3/AI_From_Scratch"